// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DeleteAccount should match default section snapshot 1`] = `
<div>
  <h2
    className="section-heading"
  >
    Delete My Account
  </h2>
  <p>
    We're sorry to see you go!
  </p>
  <p>
    Please note: Deletion of your account and personal data is permanent and cannot be undone. localhost will not be able to recover your account or the data that is deleted.
  </p>
  <p>
    Once your account is deleted, you cannot use it to take courses on localhost.
  </p>
  <p>
    <span>
      You may also lose access to verified certificates and other program credentials. You can make a copy of these for your records before proceeding with deletion.
    </span>
  </p>
  <p
    className="text-danger h6"
  >
    Warning: Account deletion is permanent. Please read the above carefully before proceeding. This is an irreversible action, and you will no longer be able to use the same email on localhost.
  </p>
  <p>
    <a
      className="pgn__hyperlink default-link standalone-link"
      href="https://support.edx.org/hc/en-us/sections/115004139268-Manage-Your-Account-Settings"
      onClick={[Function]}
      target="_self"
    >
      Want to change your email, name, or password instead?
    </a>
  </p>
  <p>
    <button
      className="btn btn-outline-danger"
      disabled={false}
      onClick={[MockFunction]}
      type="button"
    >
      Delete My Account
    </button>
  </p>
</div>
`;

exports[`DeleteAccount should match unverified account section snapshot 1`] = `
<div>
  <h2
    className="section-heading"
  >
    Delete My Account
  </h2>
  <p>
    We're sorry to see you go!
  </p>
  <p>
    Please note: Deletion of your account and personal data is permanent and cannot be undone. localhost will not be able to recover your account or the data that is deleted.
  </p>
  <p>
    Once your account is deleted, you cannot use it to take courses on localhost.
  </p>
  <p>
    <span>
      You may also lose access to verified certificates and other program credentials. You can make a copy of these for your records before proceeding with deletion.
    </span>
  </p>
  <p
    className="text-danger h6"
  >
    Warning: Account deletion is permanent. Please read the above carefully before proceeding. This is an irreversible action, and you will no longer be able to use the same email on localhost.
  </p>
  <p>
    <a
      className="pgn__hyperlink default-link standalone-link"
      href="https://support.edx.org/hc/en-us/sections/115004139268-Manage-Your-Account-Settings"
      onClick={[Function]}
      target="_self"
    >
      Want to change your email, name, or password instead?
    </a>
  </p>
  <p>
    <button
      className="btn btn-outline-danger"
      disabled={true}
      onClick={null}
      type="button"
    >
      Delete My Account
    </button>
  </p>
  <div
    className="alert d-flex align-items-start alert-warning mt-n2"
  >
    <div>
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-exclamation-triangle fa-w-18 mr-2"
        data-icon="exclamation-triangle"
        data-prefix="fas"
        focusable="false"
        role="img"
        style={Object {}}
        viewBox="0 0 576 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M569.517 440.013C587.975 472.007 564.806 512 527.94 512H48.054c-36.937 0-59.999-40.055-41.577-71.987L246.423 23.985c18.467-32.009 64.72-31.951 83.154 0l239.94 416.028zM288 354c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
    </div>
    <div>
      <span>
        Before proceeding, please 
        <a
          className="pgn__hyperlink default-link standalone-link"
          href="https://support.edx.org/hc/en-us/articles/115000940568-How-do-I-confirm-my-email-"
          onClick={[Function]}
          target="_self"
        >
          activate your account
        </a>
        .
      </span>
    </div>
  </div>
</div>
`;

exports[`DeleteAccount should match unverified account section snapshot 2`] = `
<div>
  <h2
    className="section-heading"
  >
    Delete My Account
  </h2>
  <p>
    We're sorry to see you go!
  </p>
  <p>
    Please note: Deletion of your account and personal data is permanent and cannot be undone. localhost will not be able to recover your account or the data that is deleted.
  </p>
  <p>
    Once your account is deleted, you cannot use it to take courses on localhost.
  </p>
  <p>
    <span>
      You may also lose access to verified certificates and other program credentials. You can make a copy of these for your records before proceeding with deletion.
    </span>
  </p>
  <p
    className="text-danger h6"
  >
    Warning: Account deletion is permanent. Please read the above carefully before proceeding. This is an irreversible action, and you will no longer be able to use the same email on localhost.
  </p>
  <p>
    <a
      className="pgn__hyperlink default-link standalone-link"
      href="https://support.edx.org/hc/en-us/sections/115004139268-Manage-Your-Account-Settings"
      onClick={[Function]}
      target="_self"
    >
      Want to change your email, name, or password instead?
    </a>
  </p>
  <p>
    <button
      className="btn btn-outline-danger"
      disabled={true}
      onClick={null}
      type="button"
    >
      Delete My Account
    </button>
  </p>
  <div
    className="alert d-flex align-items-start alert-warning mt-n2"
  >
    <div>
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-exclamation-triangle fa-w-18 mr-2"
        data-icon="exclamation-triangle"
        data-prefix="fas"
        focusable="false"
        role="img"
        style={Object {}}
        viewBox="0 0 576 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M569.517 440.013C587.975 472.007 564.806 512 527.94 512H48.054c-36.937 0-59.999-40.055-41.577-71.987L246.423 23.985c18.467-32.009 64.72-31.951 83.154 0l239.94 416.028zM288 354c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
    </div>
    <div>
      <span>
        Before proceeding, please 
        <a
          className="pgn__hyperlink default-link standalone-link"
          href="https://support.edx.org/hc/en-us/articles/207206067"
          onClick={[Function]}
          target="_self"
        >
          unlink all social media accounts
        </a>
        .
      </span>
    </div>
  </div>
</div>
`;
